# BareC99

./: .gitignore  CMakeLists.txt  README.md
core/allocator/: CMakeLists.txt  allocator.c
core/allocator/allocator/: allocator.h
core/assets/: CMakeLists.txt
core/common/: CMakeLists.txt
core/common/common/: bench.h  debugbreak.h  fread.h  log.h  sanitize.h  test.h
test/: CMakeLists.txt
tool/app/: CMakeLists.txt  main.c
